GPC/tests/examples/fail/errArith5.gpc

void GPRM::Test::errArith5() {
    return 3 >= 3.0;
}


